--- a/src/app/component/transfer/transfer.component.html
+++ b/src/app/component/transfer/transfer.component.html
@@ -1,3 +1,2 @@
-<p>
-  transfer works!
-</p>
+<app-transfer-list [dataSource]="leftDataSource" [titleText]="titleText" (handleSelect)="handleSelect($event)"
+    (allHandleSelect)="allHandleSelect($event)"></app-transfer-list>
