--- a/src/app/component/checkbok/checkbok.component.html
+++ b/src/app/component/checkbok/checkbok.component.html
@@ -1,5 +1,5 @@
 <span [ngClass]="classMap">
-  <input #inputElement  type="checkbox" class="checkbox-input" (blur)="onBlur()">
+  <input #inputElement [checked]="ctChecked" type="checkbox" class="checkbox-input" (blur)="onBlur()">
   <span class="checkbox-inner"></span>
 </span>
 <span #contentElement (cdkObserveContent)="checkContent()" class="checkbox-content">
