--- a/src/app/component/transfer/style/style.scss
+++ b/src/app/component/transfer/style/style.scss
@@ -100,6 +100,7 @@
         border-radius: 3px;
         text-align: center;
         border: 1px solid #d9d9d9;
+        pointer-events: none;
 
         &.transfor-arrow-right {
             margin-top: 5px;
