--- a/src/app/component/transfer/transfer.component.html
+++ b/src/app/component/transfer/transfer.component.html
@@ -2,8 +2,8 @@
     (allHandleSelect)="handleLeftSelect($event)" [filterOption]="filterOption" (filterChange)="handleFilterChange($event)"
     [searchPlaceholder]="searchPlaceholder" (status)="status('right',$event)" data-direction="left"></app-transfer-list>
 <div class="transfor-arrow">
-    <div [ngClass]="{'transfor-arrow-left': true, 'disabled':!this.leftStatus,'checked':this.leftStatus}"></div>
-    <div [ngClass]="{'transfor-arrow-right': true, 'disabled':!this.rightStatus,'checked':this.rightStatus}"></div>
+    <div (click)="moveToLeft()" [ngClass]="{'transfor-arrow-left': true, 'disabled':!leftActive,'checked':leftActive}"></div>
+    <div (click)="moveToRight()" [ngClass]="{'transfor-arrow-right': true, 'disabled':!rightActive,'checked':rightActive}"></div>
 </div>
 <app-transfer-list [dataSource]="rightDataSource" [titleText]="titleText" (handleSelect)="handleLeftSelect($event)"
     (allHandleSelect)="handleLeftSelect($event)" [filterOption]="filterOption" (filterChange)="handleFilterChange($event)"
